--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-# production:
-  # database: sweet-street_production
-  # adapter: postgresql
-  # encoding: unicode
-  # pull: 5
+ production:
+   database: sweet-street_production
+   adapter: postgresql
+   encoding: unicode
+   pull: 5
