--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PUBLISHABLE_KEY=pk_test_m41DzS4qS78qWSsagMwuZmEW
 SECRET_KEY=sk_test_4PspUfjDPXfxhoHqfCisYgYU
+
+ENV[password] = Smitty10
+ENV[email] = relroy5499@gmail.com
