--- a/config/database.yml
+++ b/config/database.yml
@@ -48,6 +48,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
  production:
+  url: <%= ENV['DATABASE_URL'] %>
+
+ production:
   database: sweet-street_production
   adapter: postgresql
   encoding: unicode
