--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+PUBLISHABLE_KEY=pk_test_m41DzS4qS78qWSsagMwuZmEW
+SECRET_KEY=sk_test_4PspUfjDPXfxhoHqfCisYgYU
 
+GMAIL_USERNAME='relroy5499@gmail.com'
+GMAIL_PASSWORD='Smitty10'
 
